This fixes {bz: 855} on Firefox.
Proved by js/test/visual/t/855.t.js

Tester might need to clear/disable browser cache to see its working.


git-svn-id: https://repo.socialtext.net:8999/svn/socialtext/trunk@9046 593ce9bc-2028-0410-bb98-c566b643a948

--- a/nlw/share/skin/s3/css/styles.css
+++ b/nlw/share/skin/s3/css/styles.css
@@ -303,7 +303,10 @@ div.tableFilter {
 	height: 41px;
 	background: url(../images/tabsRight.png) no-repeat top right;
 	float: right;
-	width: 30%;
+
+/* Using a width here causes bad overlap in narrow Firefox window.
+        width: 30%;
+*/
 }
 
 div.tableFilter label {
